Seperate front and back-end logic, show correct times for each movie

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Nunito" rel="stylesheet">
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title></title>
+    <title>Purchase Movie Tickets</title>
   </head>
   <body>
     <header>
@@ -24,7 +24,7 @@
                 <option value="none">Select a movie:</option>
                 <option value="ove">A Man Called Ove</option>
                 <option value="rogue">Rogue One</option>
-                <option value="strange">Dr Stange</option>
+                <option value="moonlight">Moonlight</option>
                 <option value="arrival">Arrival</option>
                 <option value="bladerunner">Blade Runner</option>
               </select>
@@ -34,7 +34,7 @@
           <div class="col-md-8 available-times">
             <h3>Available Times</h3>
             <ul id="movie-times">
-              
+
             </ul>
           </div>
         </div>
